--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Mr. Easy
+title: SatriX
 
 # Short description of your site
-description: Personal website and blog of Rishabh Gupta, Masters student at Computer Science and Automation at Indian Institute of Science (IISc) Bangalore. Computer Science blog of random stuff. Projects of Rishabh Gupta. About.
+description: Hi there :)
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -28,7 +28,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/me.jpeg"
+avatar: "/img/abcd.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -38,8 +38,8 @@ avatar: "/img/me.jpeg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
+navbar-col: "#000000"
+navbar-text-col: "#FFFFFF"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
@@ -60,7 +60,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Rishabh Gupta
+  name: Satbir Singh
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -68,14 +68,14 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "rishabhg1997@gmail.com"
+  email: "ribtas007@outlook.com"
 #  facebook: deanattali
-  github: mr-easy
+  github: "https://github.com/RIBTAS007"
 #  twitter: daattali
 #  reddit: yourname
-  linkedin: rishabhgupta1997
+  linkedin: "https://www.linkedin.com/in/satbir-singh-118851122/"
 #  xing: yourname
-  stackoverflow: "6430403/rishabh-gupta"
+ # stackoverflow: "6430403/rishabh-gupta"
 #  snapchat: deanat78
 #  instagram: deanat78
 #  youtube: user/deanat78
@@ -93,7 +93,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "mr-easy.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "Ribtas007.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
@@ -118,7 +118,7 @@ gtag: "UA-101604185-1"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "rishabh-gupta"
+#disqus: "rishabh-gupta"
 
 # If you want to use JustComments fill with the API Key
 #just-comments: "ABCD-EFGH-IJKL"
