--- a/_config.yml
+++ b/_config.yml
@@ -70,10 +70,10 @@ social-network-links:
   rss: true
   email: "ribtas007@outlook.com"
 #  facebook: deanattali
-  github: "https://github.com/RIBTAS007"
+  github: "RIBTAS007"
 #  twitter: daattali
 #  reddit: yourname
-  linkedin: "https://www.linkedin.com/in/satbir-singh-118851122/"
+  linkedin: "satbir-singh-118851122/"
 #  xing: yourname
  # stackoverflow: "6430403/rishabh-gupta"
 #  snapchat: deanat78
