updated my linked in url

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social-network-links:
   github: RIBTAS007
 #  twitter: daattali
 #  reddit: yourname
-  linkedin: satbir-singh-118851122/
+  linkedin: satbir007/
 #  xing: yourname
  # stackoverflow: "6430403/rishabh-gupta"
 #  snapchat: deanat78
