--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ navbar-col: "#0B0C10"
 navbar-text-col: "#66FCF1"
 navbar-children-col: "#404040"
 page-col: "#1F2833"
-link-col: "#c242f5"
-hover-col: "#c242f5"
+link-col: "#4263f5"
+hover-col: "#45A29E"
 footer-col: "#0B0C10"
 footer-text-col: "#66FCF1"
 footer-link-col: "#404040"
