--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ title: SatriX
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-#url: "https://ribtas007.github.io"
+# url: "https://ribtas007.github.io"
 
 # baseurl should be an empty string
-#baseurl: ""
+# baseurl: ""
 
 # --- Navigation bar options --- #
 
@@ -38,15 +38,15 @@ avatar: "/img/abcd.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-# navbar-col: "#F5F5F5"
-# navbar-text-col: "#404040"
-# navbar-children-col: "#F5F5F5"
-# page-col: "#FFFFFF"
-# link-col: "#008AFF"
-# hover-col: "#0085A1"
-# footer-col: "#F5F5F5"
-# footer-text-col: "#777777"
-# footer-link-col: "#404040"
+ navbar-col: "#F5F5F5"
+ navbar-text-col: "#404040"
+ navbar-children-col: "#F5F5F5"
+ page-col: "#FFFFFF"
+ link-col: "#008AFF"
+ hover-col: "#0085A1"
+ footer-col: "#F5F5F5"
+ footer-text-col: "#777777"
+ footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
