--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,34 @@
 # --- General options --- #
 
 # Name of website
-title: Satri
+title: Mr. Easy
 
 # Short description of your site
-#description: Hi there :)
+description: Personal website and blog of Rishabh Gupta, Masters student at Computer Science and Automation at Indian Institute of Science (IISc) Bangalore. Computer Science blog of random stuff. Projects of Rishabh Gupta. About.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
 # *** If you're not sure what this mean, then leave this section as it is. Only modify the url and baseurl if you know what you're doing!***
 
 # url is the the website domain URL without a trailing slash
-# url: "https://ribtas007.github.io"
+#url: "https://mr-easy.github.io"
 
 # baseurl should be an empty string
-# baseurl: ""
+#baseurl: ""
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
   Home: "index"
-  About Me: "aboutme/"
-  Experience: "blog/"
+  Blog: "blog/"
   Projects: "projects/"
+  About Me: "aboutme/"
   Contact me: "contact/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/abcd.png"
+avatar: "/img/me.jpeg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -38,15 +38,15 @@ avatar: "/img/abcd.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
- navbar-col: "#F5F5F5"
- navbar-text-col: "#404040"
- navbar-children-col: "#F5F5F5"
- page-col: "#FFFFFF"
- link-col: "#008AFF"
- hover-col: "#0085A1"
- footer-col: "#F5F5F5"
- footer-text-col: "#777777"
- footer-link-col: "#404040"
+navbar-col: "#F5F5F5"
+navbar-text-col: "#404040"
+navbar-children-col: "#F5F5F5"
+page-col: "#FFFFFF"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+footer-col: "#F5F5F5"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
@@ -60,22 +60,22 @@ avatar: "/img/abcd.png"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Satbir Singh
+  name: Rishabh Gupta
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  linkedin: satbir007/
-  github: RIBTAS007
-  email: "ribtas007@outlook.com"
+  rss: true
+  email: "rishabhg1997@gmail.com"
 #  facebook: deanattali
-#  rss: true  
+  github: mr-easy
 #  twitter: daattali
-#  reddit: yourname 
+#  reddit: yourname
+  linkedin: rishabhgupta1997
 #  xing: yourname
-#  stackoverflow: "6430403/rishabh-gupta"
+  stackoverflow: "6430403/rishabh-gupta"
 #  snapchat: deanat78
 #  instagram: deanat78
 #  youtube: user/deanat78
@@ -86,19 +86,19 @@ social-network-links:
 #  yelp: yourname
 
 # Select which share links to show in posts
-# share-links-active:
-#   twitter: true
-#   facebook: true
-#   linkedin: true
+share-links-active:
+  twitter: true
+  facebook: true
+  linkedin: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "Ribtas007.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "mr-easy.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-# gtag: "UA-101604185-1"
+gtag: "UA-101604185-1"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
@@ -118,7 +118,7 @@ url-pretty: "Ribtas007.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: "rishabh-gupta"
+disqus: "rishabh-gupta"
 
 # If you want to use JustComments fill with the API Key
 #just-comments: "ABCD-EFGH-IJKL"
@@ -172,6 +172,7 @@ defaults:
       layout: "post"
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
+      ext-js: "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"
   -
     scope:
       path: "" # all files
