--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ gtag: "UA-101604185-1"
 # --- Comments --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "Ribtas007"
+disqus: "https-ribtas007-github-io"
 
 # If you want to use JustComments fill with the API Key
 #just-comments: "ABCD-EFGH-IJKL"
